# hello-langfuse-otel

./: .env.example  Dockerfile  README.md  app.py  doc.md  docker-compose.yml  pyproject.toml  requirements.txt
app1/: .env.example  README.md  pyproject.toml
app2/: .dockerignore  README.md  app.py
app3/: .env.example
app4/: app.py  pyproject.toml
